fixed header truncate

--- a/src/index.css
+++ b/src/index.css
@@ -12,6 +12,6 @@
 
 .og-bg{
   border-radius: 16px;
-  background-color: #f1f1f1;
+  background-color: #f3f4f6;
   
 }
